Gopal,BalajiN | #0 | Updating postgres password for batch

--- a/src/main/resources/batch-default.properties
+++ b/src/main/resources/batch-default.properties
@@ -3,7 +3,7 @@
 batch.jdbc.driver=org.postgresql.Driver
 batch.jdbc.url=jdbc:postgresql://localhost/tamabatch
 batch.jdbc.user=postgres
-batch.jdbc.password=password
+batch.jdbc.password=p@ssw0rd
 batch.jdbc.testWhileIdle=true
 batch.jdbc.validationQuery=SELECT 1
 batch.schema.script=classpath:/org/springframework/batch/core/schema-postgresql.sql
